tests/expectations/parser/finalize/finalize_fail.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected 'const', 'struct', 'record', 'mapping', '@', 'async', 'function', 'transition', 'inline', '}' -- found 'finalize'
    --> test:6:7
     |
   6 |     } finalize {
     |       ^^^^^^^^"""]
